feat: favicons, styling, empty posts

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import '@fontsource/lato';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,22 +13,21 @@
 		--accent: 255 82 137;
 	}
 
-	html {
-		@apply bg-background;
-		@apply text-text;
-		@apply transition-colors;
-	}
-
-	body {
-		font-family: 'Lato', sans-serif;
-	}
-
 	.dark {
 		--text: 209 209 209;
 		--background: 8 8 8;
 		--primary: 208 135 232;
 		--secondary: 128 159 255;
 		--accent: 255 82 137;
+	}
+
+	html,
+	body {
+		@apply bg-background;
+		@apply text-text;
+		@apply transition-colors;
+		font-family: 'Lato', sans-serif;
+		min-height: 100vh;
 	}
 
 	html.dark .shiki,
